--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
     "nuxt": "^3.5.2"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.0",
+    "bootstrap-vue": "^2.23.1",
+    "vue": "^3.3.4"
   }
 }
